--- a/app/views/users/homes/search.html.erb
+++ b/app/views/users/homes/search.html.erb
@@ -34,7 +34,7 @@
             <% end %>
           </tbody>
         </table>
-      <% elsif %>
+      <% elsif @components.present? %>
         <table class="table table-hover table-inverse mb-5">
           <thead>
             <tr>
@@ -53,7 +53,8 @@
             <% end %>
           </tbody>
         </table>
-      <% else %>
+      <% end %>
+      <% if @items.count == 0 && @components.count == 0 %>
         <h3>検索結果はありません。</h3>
       <% end %>
     </div>
