--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -50,7 +50,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><%= f.submit "変更を保存", class: "btn btn-outline-success" %></td>
+            <td><%= f.submit "変更を保存", class: "btn btn-outline-success mb-5" %></td>
           </tr>
         </table>
       <% end %>
