--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -1,10 +1,10 @@
 <!-- 成分カテゴリー編集画面-->
 <div class="container">
-  <div class="row mt-3">
-    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #FFF8DC;">成分カテゴリー一覧・追加</h4>
+  <div class="row mt-5">
+    <h4 class="col-md-4 offset-4 p-3 mb-3 w-50 text-center" style="color: #494949; background: #FFF8DC;">成分カテゴリー一覧・追加</h4>
   </div>
   <div class="row">
-    <div class="col-10 my-3">
+    <div class="col-6 offset-4 my-3">
       <%= form_with model: @comp_category, url: admin_comp_categories_path, local: true do |f| %>
       　<div class="col-md-7">
           <%= render "layouts/error", model: f.object %>
@@ -16,9 +16,9 @@
         </div>
       <% end %>
     </div>
-    <div class="col-6 mb-3">
+    <div class="col-6 offset-3 mb-3">
       <table class="table table-hover">
-        <tr class="" style="text-align: center; background-color: #bed3ca;">
+        <tr class="" style="text-align: center; background-color: #FFF8DC;">
           <th>成分カテゴリー</th>
           <th></th>
         </tr>
