--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -1,4 +1,4 @@
-<!-- 成分カテゴリー編集画面-->
+<!-- 成分カテゴリー一覧・追加画面-->
 <div class="container">
   <div class="row mt-5">
     <h4 class="col-md-4 offset-4 p-3 mb-3 w-50 text-center" style="color: #494949; background: #FFF8DC;">成分カテゴリー一覧・追加</h4>
