--- a/app/views/admin/components/new.html.erb
+++ b/app/views/admin/components/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h4 class="p-3 mb-2 w-25 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">成分新規登録</h4>
+  <h4 class="p-3 mb-2 w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">成分新規登録</h4>
 </div>
 <div class="container", style="margin-left: 30rem;">
   <div class="row">
