--- a/app/views/admin/components/new.html.erb
+++ b/app/views/admin/components/new.html.erb
@@ -1,9 +1,9 @@
-<div class="container mt-4">
-  <h4 class="p-3 mb-2 w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">成分新規登録</h4>
+<div class="container mt-5">
+  <h4 class="offset-3 p-3 mb-3 w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">成分新規登録</h4>
 </div>
-<div class="container", style="margin-left: 30rem;">
+<div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 offset-3">
       <%= form_with model:@component, url:admin_components_path, local:true do |f| %>
         <%= render "layouts/error", model: f.object %>
         <table class='table table-borderless'>
