--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container mt-5">
-  <h4 class="p-3 mb-2 w-25 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品編集</h4>
+  <h4 class="offset-3 p-3 mb-2 w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">商品編集</h4>
 </div>
 <div class="container", style="margin-left: 30rem;">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 mb-3">
       <%= form_with model:@item, url:admin_item_path(@item), local:true do |f| %>
       <%= render "layouts/error", model: f.object %>
         <table class='table table-borderless'>
