--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-5 mb-4">
     <div class="col-3 col-md-6">
-      <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">商品詳細</h4>
+      <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #FFF8DC;">商品詳細</h4>
     </div>
   </div>
  <div class="card mb-3" style="max-width: 100%;">
@@ -44,7 +44,7 @@
             <div class="text-secondary">廃盤</div>
             <% end %>
           </p>
-          <p class="card-text"><small class="text-muted"><%= @item.created_at%></small></p>
+        <p class="card-text"><small class="text-muted"><%= @item.created_at%></small></p>
       </div>
     </div>
   </div>
